tests/snapshots/resize__minimum_viable_size.snap
---
source: tests/resize.rs
expression: snapshot
---
                                                    
                                                    
                                                    
██████╗ ██╗      ██████╗  ██████╗██╗  ██╗████████╗██
██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝╚══██╔══╝╚█
██████╔╝██║     ██║   ██║██║     █████╔╝    ██║    ╚
██╔══██╗██║     ██║   ██║██║     ██╔═██╗    ██║    █
██████╔╝███████╗╚██████╔╝╚██████╗██║  ██╗   ██║   ██
╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝   ╚═╝   ╚═
        a terminal falling-block puzzle game        
                                                    
               ╭─ high scores ──────╮               
               │                    │               
               │    no scores yet   │               
               │                    │               
               │                    │               
               │                    │               
               │                    │               
               │                    │               
               ╰────────────────────╯               
        move:  ← →   drop: space    pause:  p       
        rotate: z x  soft: ↓        quit:   q       
                                                    
  press any key to start     ·     r  reset scores
