tests/snapshots/resize__too_small_overlay.snap
---
source: tests/resize.rs
expression: snapshot
---
                    
                    
╭──────────────────╮
│                  │
│Terminal too small│
│Resize to at least│
╰──────────────────╯
